update file tabel

--- a/tabel.html
+++ b/tabel.html
@@ -1,12 +1,13 @@
 <html>
 
 <head>
-    <title>Membuat Tabel</title>
+    <title>Membuat Tabel Mahasiswa</title>
 </head>
 
 <body>
     <h2>Tabel Mahasiswa</h2>
     <hr>
+    <!-- tabel mahaasiswa -->
     <table border="1" width='50%' align="center">
         <thead>
             <tr>
@@ -25,7 +26,6 @@
              <tr>
                 <td>2</td>
                 <td colspan="2">Pahrul Lagi</td>
-                <!-- <td>Mataram Lagi</td> -->
             </tr>
         </tbody>
 
