--- a/index.html
+++ b/index.html
@@ -1,34 +1,47 @@
 <html>
 
-	<head>
-		<title>Belajar</title>
-	</head>
+<head>
+    <title>Belajar</title>
+    <!--internal css-->
+    <style>
+        .merah {
+            color: red;
+        }
+    </style>
 
-	<body>
-		<h1>Belajar HTML</h1>
-		<hr>
-		<p align="center">
-			<b><i>Lorem</i></b> <u>ipsum dolor sit</u> amet <i>consectetur</i> <br> <br> adipisicing elit. Laborum vel
-			dignissimos beatae molestiae! Porro eveniet numquam eligendi temporibus, quisquam exercitationem cupiditate
-			aliquam expedita maiores commodi aperiam quidem quasi nobis error ex veniam corporis voluptatem ipsam at quo
-			officia ducimus odio quos. Quaerat veritatis autem exercitationem, impedit culpa ab, modi amet nesciunt
-			fugiat reiciendis sunt obcaecati illo eos hic. Odio ullam dolores non quisquam culpa.</p>
+    <link rel="stylesheet" href="style.css">
 
-		<!-- membuat list -->
-		<h2>Unordered list</h2>
-		<ul type="square">
-			<li>Remote</li>
-			<li>Spidol</li>
-		</ul>
-		<h2>Ordered List</h2>
-		<ol type="I" start="4">
-			<li>Spidol lagi</li>
-			<li>Mouse</li>
-			<li>Mouse</li>
-		</ol>
+</head>
+<body>
+<!--inline css-->
+<h1 style="color: #F00; font-family: georgia;">Belajar HTML</h1>
+<hr>
+<p align="center">
+    <b><i>Lorem</i></b> <u>ipsum dolor sit</u> amet <i>consectetur</i> <br> <br> adipisicing elit. Laborum vel
+    dignissimos beatae molestiae! Porro eveniet numquam eligendi temporibus, quisquam exercitationem cupiditate
+    aliquam expedita maiores commodi aperiam quidem quasi nobis error ex veniam corporis voluptatem ipsam at quo
+    officia ducimus odio quos. Quaerat veritatis autem exercitationem, impedit culpa ab, modi amet nesciunt
+    fugiat reiciendis sunt obcaecati illo eos hic. Odio ullam dolores non quisquam culpa.</p>
 
-		<!-- buat tabel -->
-	</body>
+<!-- membuat list -->
+<h2>Unordered list</h2>
+
+<ul type="square" class="merah miring">
+
+    <li>Remote</li>
+    <li>Spidol</li>
+</ul>
+<h2>Ordered List</h2>
+
+<ol type="I" start="4" class="miring">
+
+    <li class="merah">Spidol lagi</li>
+    <li>Mouse</li>
+    <li>Mouse</li>
+</ol>
+
+<!-- buat tabel -->
+</body>
 
 </html>
 
